@@ -11,14 +11,14 @@ exec wish "$0" "$@"
 # ".tcl" files is this directory, which are sourced by this script
 # as needed.
 #
-# RCS: @(#) $Id: widget,v 1.15 2003/08/22 22:44:15 dkf Exp $
+# RCS: @(#) $Id: widget,v 1.16 2003/09/25 05:37:00 das Exp $
 
 eval destroy [winfo child .]
 package require msgcat
 ::msgcat::mcload [file join $tk_library demos]
 namespace import ::msgcat::mc
 wm title . [mc "Widget Demonstration"]
-if {$tcl_platform(platform) eq "unix"} {
+if {[tk windowingsystem] eq "x11"} {
     # This won't work everywhere, but there's no other way in core Tk
     # at the moment to display a coloured icon.
     image create photo TclPowered \
@@ -72,7 +72,7 @@ menu .menuBar -tearoff 0
 menu .menuBar.file -tearoff 0
 
 # On the Mac use the specia .apple menu for the about item
-if {[tk windowingsystem] eq "classic"} {
+if {[tk windowingsystem] eq "classic" || [tk windowingsystem] eq "aqua"} {
     .menuBar add cascade -menu .menuBar.apple
     menu .menuBar.apple -tearoff 0
     .menuBar.apple add command -label [mc "About..."] -command {aboutBox}
